--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,23 @@
   </head>
 
   <body>
+    <header>
+      <% if user_signed_in? %>
+        <li>
+          <%= link_to "ログアウト",destroy_user_session_path, method: :delete %>
+        </li>
+      <% else %>
+        <li>
+          <%= link_to "ゲストログイン", public_guest_sign_in_path, method: :post, class: "login" %>
+        </li>
+        <li>
+          <%= link_to "ログイン", new_user_session_path %>
+        </li>
+         <li>
+          <%= link_to "ユーザ登録", new_user_registration_path %>
+        </li>
+      <% end %>
+    </header>
     <%= yield %>
   </body>
 </html>
