--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,9 @@
-<h1>トップページ</h1>
+<div class="container">
+  <h1>トップページ</h1>
+    <div class="row">
+      <% @images each do %>
+        <%= link_to 
+      <% end %>
+    </div>
+</div>
 
