--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,15 @@
     <header>
       <% if user_signed_in? %>
         <li>
+          <%= link_to "マイページ", users_mypage_path %>
+        </li>
+        <li>
+          <%= link_to "ユーザ情報編集", edit_user_path %>
+        </li>
+         <li>
+          <%= link_to "投稿する", new_user_registration_path %>
+        </li>
+        <li>
           <%= link_to "ログアウト",destroy_user_session_path, method: :delete %>
         </li>
       <% else %>
