--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,8 +1,16 @@
 <div class="container">
   <h1>トップページ</h1>
     <div class="row">
-      <% @images each do %>
-        <%= link_to 
+      <% @posts each do |posts| %>
+        <%= link_to post_path(posts.id) do %>
+          <span><%= image_tag posts.image, size: "250×200" %></span>
+        <% end %>
+        <%= posts.profile_image %>
+        <%= posts.user.name %>
+        <%= posts.title %>
+        <%= posts.like %>
+        <%= posts.category %>
+        <%= posts.introduction %>
       <% end %>
     </div>
 </div>
