--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,10 @@
           <%= link_to "マイページ", users_mypage_path %>
         </li>
         <li>
-          <%= link_to "ユーザ情報編集", edit_user_path %>
+          <%= link_to "ユーザ情報編集", edit_user_path(current_user) %>
         </li>
          <li>
-          <%= link_to "投稿する", new_user_registration_path %>
+          <%= link_to "投稿する", new_post_path %>
         </li>
         <li>
           <%= link_to "ログアウト",destroy_user_session_path, method: :delete %>
@@ -39,4 +39,5 @@
     </header>
     <%= yield %>
   </body>
+  
 </html>
