--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <h1>トップページ</h1>
     <div class="row">
-      <% @posts each do |posts| %>
+      <% @posts.each do |posts| %>
         <%= link_to post_path(posts.id) do %>
           <span><%= image_tag posts.image, size: "250×200" %></span>
         <% end %>
