--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -2,7 +2,7 @@
   <h1>マイページ</h1>
   <div class="row">
       <%= link_to user_path(current_user) do %>
-        <%= image_tag @user.get_profile_image, size: "100×100" %>
+        <%= image_tag @user.get_profile_image, width: 100, height: 100 %>
       <% end %>
       <p>プロフィール</p>
       <%= @user.self_introduction %>
