--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -35,5 +35,26 @@
           <%= posts.cleaning_recipe %>
           <%= image_tag @post.get_recipe_image, size: "100x100" %>
         <% end %>
+        
+        <div>
+          <%= form_with model: [@post, @post_comment] do |f| %>
+            <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに記述" %>
+            <%= f.submit "送信する" %>
+          <% end %>
+        </div>
+        
+        <div>
+          <p>コメント件数：<%= @post.comments.count %></p>
+          
+          <% @post.post_comments.each do |post_comment| %>
+            <p><%= image_tag post_comment.user.get_profile_image(100,100) %></p>
+            <%= post_comment.user.user_name %>
+            <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
+            <% if post_comment.user == current_user %>
+              <%= link_to "削除する", post_comment_path, method: :delete %>
+            <% end %>
+          <% end %>
+        </div>
+        
     </div>
 </div>
