--- a/app/views/public/posts/_cleaning_tool_fields.html.erb
+++ b/app/views/public/posts/_cleaning_tool_fields.html.erb
@@ -1,7 +1,7 @@
 <div class="nested-fields">
   <table>
     <tr>
-      <td class="td-fixed-select">
+      <td class="td-fixed-cleaning_tool">
         <%= f.text_field :cleaning_tool_name %>
       </td>
       <td class="td-fixed-delete">
