--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,11 +1,13 @@
 <div class="container">
   <h1>投稿一覧</h1>
-    <div class="row">
-      <% @posts each do |posts| %>
-        <%= link_to posts.title, post_path(posts.id) do %>
+  <div class="row">
+    <% @posts.each do |posts| %>
+      <%= link_to posts.title, post_path(posts.id) do %>
         <%= posts.like %>
         <%= posts.category %>
         <%= posts.created_at %>
       <% end %>
-    </div>
+    <% end %>
+    <%= paginate @posts %>
+  </div>
 </div>
