--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,16 +1,18 @@
 <div class="container">
   <h1>トップページ</h1>
     <div class="row">
-      <% @posts.each do |posts| %>
-        <%= link_to post_path(posts.id) do %>
-          <span><%= image_tag posts.image, size: "250×200" %></span>
+      <% @posts.each do |post| %>
+        <%= link_to post_path(post.id) do %>
+          <span><%= image_tag post.post_image, size: "250×200" %></span>
         <% end %>
-        <%= posts.profile_image %>
-        <%= posts.user.name %>
-        <%= posts.title %>
-        <%= posts.like %>
-        <%= posts.category %>
-        <%= posts.introduction %>
+        <%= image_tag post.user.profile_image %>
+        <%= post.user.user_name %>
+        <%= post.title %>
+        <%= post.likes.count %>
+        <% post.categories.each do |category| %>
+          <%= category.category_name %>
+        <% end %>
+        <%= post.introduction %>
       <% end %>
     </div>
 </div>
