--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -22,6 +22,7 @@
           <% end %> 
         </div>
       </div>
+      
       <div class="row">
         <span>用意するもの</span>
         <div class="add-botton-box">
@@ -34,7 +35,7 @@
               } 
           %>
         </div>
-        <%= f.text_field :cleaning_tool %>
+        <!--<%#= f.text_field :cleaning_tool %>-->
         <div id="detail-association-insertion-point"></div>
         
         <%= f.fields_for :cleaning_tools do |form| %>
@@ -54,13 +55,15 @@
               } 
           %>
         </div>
-        <%= f.file_field :recipe_image,accept: "image/*" %>
-        <%= f.text_area :cleaning_recipe, placeholder: "説明文" %>
+        <%#= f.fields_for :recipe_image,accept: "image/*" %>
+        <!--<%#= f.fields_for :cleaning_recipe, placeholder: "説明文" %>-->
         <div id="detail-association-insertion-point2"></div>
+        
         <%= f.fields_for :cleaning_recipes do |form| %>
           <%= render "cleaning_recipe_fields", f: form %>
         <% end %>
       </div>
+
       <%= f.submit "投稿", class: "btn btn-success" %>
     <% end %>
   </div>
