--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,1 +1,40 @@
-ユーザ一覧
+<div class="container">
+  <h1>管理者 ユーザ一覧</h1>
+    <div class="row">
+      <div class="col-2">
+        ユーザid
+      </div>
+      <div class="col-2">
+        ユーザ名
+      </div>
+      <div class="col-4">
+        メールアドレス
+      </div>
+      <div class="col-4">
+        ユーザステータス
+      </div>
+      <% @user.each do |user| %>
+        <div class="col-2">
+          <%= link_to user.id, admin_user_path(user.id) %>
+          <%= %>
+        </div>
+        <div class="col-2">
+          <% if user.user_name.present? %>
+            <%= post.user.user_name %>
+          <% else %>
+            未登録
+          <% end %>
+        </div>
+        <div class="col-4">
+          <%= user.email %>
+        </div>
+        <div class="col-4">
+          <% if user.is_deleted %>
+            退会
+          <% else %>
+            有効
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+</div>
