--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,1 +1,54 @@
-ユーザー情報編集
+<div class="container">
+    <h1>管理者 ユーザ情報編集</h1>
+    <div class="row">
+      <div class="col-12">
+        <%= image_tag @user.profile_image %>
+      </div>
+      <div class="col-6">
+        ユーザID
+      </div>
+      <div class="col-6">
+      <%= @user.id %>
+      </div>
+      <div class="col-6">
+        ユーザ名
+      </div>
+      <div class="col-6">
+        <% if @user.user_name.present? %>
+          <%= user.user_name %>
+        <% else %>
+          未登録
+        <% end %>
+      </div>
+      <div class="col-6">
+        メールアドレス
+      </div>
+      <div class="col-6">
+        <%= @user.email %>
+      </div>
+      <div class="col-6">
+        プロフィール
+      </div>
+      <div class="col-6">
+        <% if @user.self_introduction.present? %>
+          <%= @user.self_introduction %>
+        <% else %>
+          未登録
+        <% end %>
+      </div>
+      <div class="col-6">
+        ユーザステータス
+      </div>
+      <div class="col-6">
+        <%= form_with model: @user, url: admin_user_path(@user), local: true do |f| %>
+          <%= f.radio_button :is_deleted, :false %>
+          <%= f.label :is_deleted, "有効", value: :false %>
+          <%= f.radio_button :is_deleted, :true %>
+          <%= f.label :is_deleted, "退会", value: :true %>
+          <div class="col-6">
+            <%= f.submit "編集", class: "btn btn-success" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+</div>
