--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,1 +1,53 @@
-ユーザ情報詳細
+<div class="container">
+    <h1>管理者 ユーザ情報詳細</h1>
+    <div class="row">
+      <div class="col-12">
+        <%= image_tag @user.profile_image %>
+      </div>
+      <div class="col-6">
+        ユーザID
+      </div>
+      <div class="col-6">
+      <%= @user.id %>
+      </div>
+      <div class="col-6">
+        ユーザ名
+      </div>
+      <div class="col-6">
+        <% if @user.user_name.present? %>
+          <%= user.user_name %>
+        <% else %>
+          未登録
+        <% end %>
+      </div>
+      <div class="col-6">
+        メールアドレス
+      </div>
+      <div class="col-6">
+        <%= @user.email %>
+      </div>
+      <div class="col-6">
+        プロフィール
+      </div>
+      <div class="col-6">
+        <% if @user.self_introduction.present? %>
+          <%= @user.self_introduction %>
+        <% else %>
+          未登録
+        <% end %>
+      </div>
+      <div class="col-6">
+        ユーザステータス
+      </div>
+      <div class="col-6">
+        <% if @user.is_deleted %>
+          退会
+        <% else %>
+          有効
+        <% end %>
+      </div>
+      <div class="col-12">
+        <%= link_to "編集", edit_admin_user_path(@user), class: "btn btn-success" %>
+      </div>
+    </div>
+</div>
