[add]いいね関連・コメント関連機能追加、その他バグ修正

--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -15,7 +15,7 @@
       </div>
       <div class="col-6">
         <% if @user.user_name.present? %>
-          <%= user.user_name %>
+          <%= @user.user_name %>
         <% else %>
           未登録
         <% end %>
