--- a/app/views/admin/comments/index.html.erb
+++ b/app/views/admin/comments/index.html.erb
@@ -1,1 +1,31 @@
-コメント一覧
+<div class="container">
+  <h1>管理者 コメント一覧</h1>
+    <div class="row">
+      <div class="col-2">
+      コメントID
+      </div>
+      <div class="col-5">
+      投稿ユーザ名
+      </div>
+      <div class="col-5">
+      コメント
+      </div>
+      
+      <% @comments.each do |comment| %>
+        <div class="col-2">
+          <%= link_to comment.id, admin_comment_path(comment.id) %>
+        </div>
+        <div class="col-5">
+          <%= comment.comment %>
+        </div>
+        <div class="col-5">
+          <% if comment.user.user_name.present? %>
+            <%= comment.user.user_name %>
+          <% else %>
+            未登録
+          <% end %>
+        </div>
+      <% end %>
+      <%= paginate @comments %>
+    </div>
+</div>
