--- a/app/views/admin/comments/show.html.erb
+++ b/app/views/admin/comments/show.html.erb
@@ -1,1 +1,30 @@
-コメント詳細
+<div class="container">
+    <h1>管理者 コメント詳細</h1>
+    <div class="row">
+      <div class="col-6">
+        コメントID
+      </div>
+      <div class="col-6">
+        <%= @comment.id %>
+      </div>
+      <div class="col-6">
+        ユーザ名
+      </div>
+      <div class="col-6">
+        <% if @comment.user.user_name.present? %>
+          <%= @comment.user.user_name %>
+        <% else %>
+          未登録
+        <% end %>
+      </div>
+      <div class="col-6">
+        コメント
+      </div>
+      <div class="col-6">
+        <%= @comment.comment %>
+      </div>
+      <div class="col-12">
+        <%= link_to "削除する", post_comment_path(@comment), class: "btn btn-success" %>
+      </div>
+    </div>
+</div>
