--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,17 +1,30 @@
 <div class="container">
   <h1>管理者 投稿一覧トップページ</h1>
     <div class="row">
+      <div class="col-2">
+      投稿ID
+      </div>
+      <div class="col-5">
+      投稿タイトル
+      </div>
+      <div class="col-5">
+      投稿ユーザ名
+      </div>
       <% @posts.each do |post| %>
-        投稿id
-        <%= post.post_id %>
-        投稿タイトル
-        <%= post.title %>
-        投稿ユーザ名
-        <% if post.user.user_name.present? %>
-          <%= post.user.user_name %>
-        <% else %>
-          未登録
-        <% end %>
+        <div class="col-2">
+          <%= link_to post.id, admin_post_path(post.id) %>
+        </div>
+        <div class="col-5">
+          <%= post.title %>
+        </div>
+        <div class="col-5">
+          <% if post.user.user_name.present? %>
+            <%= post.user.user_name %>
+          <% else %>
+            未登録
+          <% end %>
+        </div>
       <% end %>
+      <%= paginate @posts %>
     </div>
 </div>
