--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -8,19 +8,10 @@
       <% end %>
     </div>
     <div class="row">
-      <span>トップ画像</span>
       <%= image_tag @post.get_post_image(100,100) %>
       <%= link_to @user.user_name, user_path(@user.id) %>
       <span>いいね</span>
-      <% if @post.liked_by?(current_user) %>
-        <%= link_to likes_path(@post), method: :delete do %>
-          ♥<%= @post.likes.count %>
-        <% end %>
-      <% else %>
-        <%= link_to likes_path(@post), method: :post do %>
-          ♡<%= @post.likes.count %>
-        <% end %>
-      <% end %>
+      ♡<%= @post.likes.count %>
      <span>作成日時</span>
      <%= @post.created_at.strftime('%Y/%m/%d') %>
     </div>
@@ -48,22 +39,14 @@
       <% end %>
       
       <div>
-        <%= form_with model: [@post, @post_comment] do |f| %>
-          <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに記述" %>
-          <%= f.submit "送信する" %>
-        <% end %>
-      </div>
-      
-      <div>
         <p>コメント件数：<%= @post.comments.count %></p>
         
-        <% @post.comments.each do |comment| %>
+        <% @post.comments.each do |post_comment| %>
           <p><%= image_tag post_comment.user.get_profile_image(100,100) %></p>
-          <%= comment.user.user_name %>
-          <%= comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
-          <% if comment.user == current_user %>
-            <%= link_to "削除する", post_comment_path, method: :delete %>
-          <% end %>
+          <%= post_comment.user.user_name %>
+          <%= post_comment.created_at.strftime('%Y/%m/%d') %>
+          <%= post_comment.comment %>
+          <%= link_to "詳細", admin_comment_path %>
         <% end %>
       </div>
     </div>  
