--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -13,14 +13,14 @@
       <div class="col-4">
         ユーザステータス
       </div>
-      <% @user.each do |user| %>
+      <% @users.each do |user| %>
         <div class="col-2">
           <%= link_to user.id, admin_user_path(user.id) %>
           <%= %>
         </div>
         <div class="col-2">
           <% if user.user_name.present? %>
-            <%= post.user.user_name %>
+            <%= user.user_name %>
           <% else %>
             未登録
           <% end %>
@@ -36,5 +36,6 @@
           <% end %>
         </div>
       <% end %>
+      <%= paginate @users %>
     </div>
 </div>
