--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <h4>投稿編集</h4>
   <div class="row">
-    <%= form_with model: @post, url: post_path do |f| %>
+    <%= form_with model: @post, url: post_path(@post), method: :patch do |f| %>
       <div class="row">
         <span>タイトル</span>
         <%= f.text_field :title %>
@@ -16,33 +16,51 @@
       </div>
       <div class="row">
         <span>カテゴリ</span>
-        <%= f.text_field :category %>
+        <div class="field">
+          <%= collection_check_boxes(:post, :category_ids, Category.all, :id, :category_name ) do |t|  %>
+            <% t.label { t.check_box + t.text } %>
+          <% end %> 
+        </div>
       </div>
       <div class="row">
         <span>用意するもの</span>
-        <%= f.text_field :cleaning_tool %>
+        
+        <%= link_to_add_association "追加ボタン", f, :cleaning_tools, 
+          class: 'add_fields',
+          data: {
+            association_insertion_node: '#detail-association-insertion-point',
+            association_insertion_method: 'after'
+            }
+        %>
+        
         <div id="detail-association-insertion-point"></div>
-        <%= f.fields_for :creaning_tools do |f| %>
-          <%= render "cleaning_tools_fields", f: form %>
+        <%= f.fields_for :cleaning_tools do |form| %>
+          <%= render "cleaning_tool_fields", f: form %>
         <% end %>
         
-        <div class="add-botton-box">
-          <%= link_to_add_association "追加ボタン", f, :cleaning_tools, class: 'add_fields', id: 'add-btn',
-            data: {
-              association_insertion_node: '#detail-association-insertion-point',
-              association_insertion_method: 'after'
-              }
-          %>
-        </div>
+       
         
       </div>
+      
       <div class="row">
         <span>掃除方法</span>
-        <%= f.file_field :recipe_image,accept: "image/*" %>
+        <div class="add-botton-box">
+          <%= link_to_add_association "追加ボタン", f, :cleaning_recipes,
+            class: 'add_fields',
+            id: 'add-btn',
+            data: {
+              association_insertion_node: '#detail-association-insertion-point2',
+              association_insertion_method: 'append'
+              } 
+          %>
+        </div>
+        <%#= f.fields_for :recipe_image,accept: "image/*" %>
+        <!--<%#= f.fields_for :cleaning_recipe, placeholder: "説明文" %>-->
+        <div id="detail-association-insertion-point2"></div>
         
-      </div>
-      <div class="row">
-        <%= f.text_area :cleaning_recipe, placeholder: "説明文" %>
+        <%= f.fields_for :cleaning_recipes do |form| %>
+          <%= render "cleaning_recipe_fields", f: form %>
+        <% end %>
       </div>
       <%= link_to "削除", post_path(@post), method: :delete %>
       <%= f.submit "更新", class: "btn btn-success" %>
