--- a/app/views/public/posts/my_likes.html.erb
+++ b/app/views/public/posts/my_likes.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-  <h1>トップページ</h1>
+  <h1>ブックマーク</h1>
     <div class="row">
-        <% @posts.each do |post| %>
+        <% @like_posts.each do |post| %>
           <div class="col-md-4">
             <%= link_to post_path(post.id) do %>
               <div class="row">
@@ -28,4 +28,3 @@
         <% end %>
     </div>
 </div>
-
