--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -7,7 +7,7 @@
         <% end %>
 
         <% @posts.each do |post| %>
-          <%= link_to post.title, post_path(post.id) %>
+          <%= link_to post.title, search_path %>
         <% end %>
     
  
