--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,1 +1,14 @@
 @import '~bootstrap/scss/bootstrap';
+
+header{
+  display:flex;
+}
+
+ul{
+  display:flex;
+  list-style:none;
+}
+
+li{
+  margin-left:40px;
+}
