--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,7 +1,8 @@
+ <%= flash[:notice] %>
 <div class="container">
   <h4>新規投稿</h4>
   <div class="row">
-    <%= form_with model: @post,url: posts_path do |f| %>
+    <%= form_with model: @post, url: posts_path do |f| %>
       <div class="row">
         <span>タイトル</span>
         <%= f.text_field :title %>
@@ -60,7 +61,7 @@
         </div>
       </div>
       <%= f.submit "下書き保存", :name => 'draft_post', class: "btn btn-primary" %>
-      <%= f.submit "投稿", :name => 'post', class: "btn btn-success" %>
+      <%= f.submit "投稿", name: "true_post", class: "btn btn-success" %>
     <% end %>
   </div>
 </div>
