--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -1,4 +1,5 @@
-<div class="container">
+ <%= flash[:notice] %>
+ <div class="container">
   <h1>マイページ</h1>
   <div class="row">
     <div class="col-md-6">
