[fix]バリデーション機能修正

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -19,13 +19,14 @@
                 <%= post.title %><br>
                 ♡<%= post.likes.count %><br>
                 <% post.categories.each do |category| %>
-                  <%= category.category_name %><br>
+                  <%= category.category_name %>
                 <% end %>
                 <%= post.introduction %>
               </div>
             <% end %>
           </div>
         <% end %>
+        <%= paginate @posts %>
     </div>
 </div>
 
