--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,14 +1,31 @@
 @import '~bootstrap/scss/bootstrap';
 
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+}
+
 header{
-  display:flex;
+  display: flex;
 }
 
-ul{
-  display:flex;
-  list-style:none;
+.logo{
+  margin:20px 0 0 30px;
+  float:left;
 }
 
-li{
-  margin-left:40px;
+ul.list {
+  display: flex;
+  justify-content: flex-end;
+  list-style: none;
+}
+
+li {
+  padding: 0 10px;
+  margin-top:30px;
+}
+
+footer{
+  
 }
