--- a/app/views/admin/comments/show.html.erb
+++ b/app/views/admin/comments/show.html.erb
@@ -1,3 +1,4 @@
+<%= flash[:notice] %>
 <div class="container">
     <h1>管理者 コメント詳細</h1>
     <div class="row">
@@ -24,7 +25,8 @@
         <%= @comment.comment %>
       </div>
       <div class="col-12">
-        <%= link_to "削除する", post_comment_path(@comment), class: "btn btn-success" %>
+        <%= link_to "削除する", post_comment_path(@comment), class: "btn btn-success",
+        data: {confirm: "コメントを削除します。よろしいですか？"} %>
       </div>
     </div>
 </div>
