--- a/app/views/public/categories/index.html.erb
+++ b/app/views/public/categories/index.html.erb
@@ -1,9 +1,11 @@
 <div class="container">
   <div class="row">
     <% @category.each do |category| %>
-      <%= link_to posts_path(category_id: category.id) do %>
-        <%= category.category_name %>
-      <% end %>
+      <div class="col-2">
+        <%= link_to posts_path(category_id: category.id) do %>
+          <%= category.category_name %>
+        <% end %>
+      </div>
     <% end %>
   </div>
 </div>
